--- a/index.html
+++ b/index.html
@@ -8,7 +8,62 @@
 
 <body>
 	<script type="text/javascript">
-		
+		function randomInt(min, max) {
+			min = Math.ceil(min);
+			max = Math.floor(max);
+			return Math.floor(Math.random() * (max - min+1)) + min;
+		}
+
+		function computerPlay() {
+			nbr = randomInt(1, 3);
+
+			switch(nbr) {
+				case 1 :
+					return 'rock';
+					break;
+
+				case 2 :
+					return 'paper';
+					break;
+
+				case 3 :
+					return 'scissors';
+					break;
+
+				default :
+					return undefined;
+					break;
+			}
+		}
+
+		function playerSelection() {
+			select = prompt("Rock/Paper/Scissors").toLowerCase();
+
+			if (select != "rock" && select != "paper" && select != "scissors") {
+				select = prompt("Rock/Paper/Scissors").toString().toLowerCase();
+			}
+
+			return select;
+		}
+
+		function play(playerSelection, computerSelection) {
+			if(playerSelection == "paper" && computerSelection == "rock" || playerSelection == "rock" && computerSelection == "scissors" || playerSelection == "scissors" && computerSelection == "paper") {
+				return "You win: " + playerSelection + " beat " + computerSelection;
+			} else if (playerSelection == computerSelection) {
+				return "Equality: " + playerSelection + " and " + computerSelection + " are the sames";
+			} else {
+				return "You loose: " + computerSelection + " beat " + playerSelection;
+			}
+
+			return undefined;
+		}
+
+		console.log(play(playerSelection(), computerPlay()));
+		console.log(play(playerSelection(), computerPlay()));
+		console.log(play(playerSelection(), computerPlay()));
+		console.log(play(playerSelection(), computerPlay()));
+		console.log(play(playerSelection(), computerPlay()));
+
 	</script>
 </body>
 </html>
