--- a/index.html
+++ b/index.html
@@ -3,77 +3,19 @@
 <html>
 <head>
 	<meta charset="utf8">
+	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<title>Rock-paper-scissors</title>
 </head>
 
 <body>
-	<script type="text/javascript">
-		function randomInt(min, max) {
-			min = Math.ceil(min);
-			max = Math.floor(max);
-			return Math.floor(Math.random() * (max - min+1)) + min;
-		}
+	<div id="container">
+		<button class="choice">Rock</button>
+		<button class="choice">Paper</button>
+		<button class="choice">Scissors</button>
+	</div>
 
-		function computerPlay() {
-			nbr = randomInt(1, 3);
-
-			switch(nbr) {
-				case 1 :
-					return 'rock';
-					break;
-
-				case 2 :
-					return 'paper';
-					break;
-
-				case 3 :
-					return 'scissors';
-					break;
-
-				default :
-					return undefined;
-					break;
-			}
-		}
-
-		function playerSelection() {
-			select = prompt("Rock/Paper/Scissors");
-
-			if (select == null) {
-				return null;
-			}
-
-			select = select.toLowerCase();
-
-			if (select != "rock" && select != "paper" && select != "scissors") {
-				console.log("Incorrect entry");
-				select = playerSelection();
-			}
-
-			return select;
-		}
-
-		function play(playerSelection, computerSelection) {
-			if (playerSelection == undefined) {
-				return "Game left";
-			}
-			else if(playerSelection == "paper" && computerSelection == "rock" || playerSelection == "rock" && computerSelection == "scissors" || playerSelection == "scissors" && computerSelection == "paper") {
-				return "You win: " + playerSelection + " beat " + computerSelection;
-			} else if (playerSelection == computerSelection) {
-				return "Equality: " + playerSelection + " and " + computerSelection + " are the sames";
-			} else {
-				return "You loose: " + computerSelection + " beat " + playerSelection;
-			}
-
-			return undefined;
-		}
-
-		console.log(play(playerSelection(), computerPlay()));
-		console.log(play(playerSelection(), computerPlay()));
-		console.log(play(playerSelection(), computerPlay()));
-		console.log(play(playerSelection(), computerPlay()));
-		console.log(play(playerSelection(), computerPlay()));
-
-	</script>
+	<div id="result"><p></p></div>
 </body>
+
+<script type="text/javascript" src="javascript/game.js"></script>
 </html>
